--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -13,19 +13,24 @@
 
       <div class='inner'>
         <ul id='social_networks'>
+            <li>
+                <a href="/" title="Home">
+                    <img src="http://red-green-tumblr.heroku.com/images/home_icon.png" id="home">
+                </a>
+            </li>
           <li>
-            <a href='http://twitter.com/trivektor'>
+            <a href='http://twitter.com/trivektor' title="Twitter">
               <img id="twitter" src="http://red-green-tumblr.heroku.com//images/twitter_social.png">
             </a>
           </li>
           <li>
-            <a href='http://facebook.com/trivuong'>
+            <a href='http://facebook.com/trivuong' title="Facebook">
 
               <img id="facebook" src="http://red-green-tumblr.heroku.com//images/facebook_social.png">
             </a>
           </li>
           <li>
-            <a href='http://github.com/trivektor'>
+            <a href='http://github.com/trivektor' title="Github">
               <img id="github" src="http://red-green-tumblr.heroku.com//images/github_social.png">
             </a>
           </li>
@@ -45,7 +50,7 @@
 
             <h1 class='title'>
                 <a href="/" style="color:#fff !important">
-                Tri Vuong's blog (mostly rants)
+                    {Title}
                 </a>
             </h1>
           </div>
