update note css and tumblr markup

--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -119,7 +119,7 @@
 								
 								<!-- AUDIO -->
 								{block:Audio}
-									<div class="AUDIO_info">
+									<div class="auto_info">
 										<div class="AUDIO_info_album">
 											<div class="AUDIO_info_album_overlay"></div>
 											{block:AlbumArt}<img  alt="" src="{AlbumArtURL}" />{/block:AlbumArt}
