--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -75,16 +75,11 @@
                     </div>
                     
                     {block:NoteCount}
-        			          <a class="note_count" href="{Permalink}#notes">{NoteCountWithLabel}</a>
+            		          <a class="note_count" href="{Permalink}#notes">{NoteCountWithLabel}</a>
 					          {/block:NoteCount}
 					          
 					          <div class="post_type_icon">
-					            <img src="http://red-green-tumblr.heroku.com/css/images/photo_icon.png" class="photo_icon" />
-					            <img src="http://red-green-tumblr.heroku.com/css/images/video_icon.png" class="video_icon" />
-					            <img src="http://red-green-tumblr.heroku.com/css/images/text_icon.png" class="text_icon" />
-					            <img src="http://red-green-tumblr.heroku.com/css/images/quote_icon.png" class="quote_icon" />
-					            <img src="http://red-green-tumblr.heroku.com/css/images/photo_icon.png" class="photo_icon" />
-					            <img src="http://red-green-tumblr.heroku.com/css/images/chat_icon.png" class="chat_icon" />
+					            <img src="http://red-green-tumblr.heroku.com/css/images/{PostType}_icon.png" />
 					          </div>
 
                 </div>
