profile picture update

--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -268,7 +268,9 @@
       </div>
       <div id='profile_picture_column'>
         <div id="polaroid">
-            <img src="{PortraitURL-128}">
+            <div class="inner">
+              <img src="{PortraitURL-128}" alt="Me" />
+            </div>
         </div>
         
         {block:AskEnabled}
