profile picture update

--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -269,6 +269,7 @@
       <div id='profile_picture_column'>
         <div id="polaroid">
             <div class="inner">
+              <div class="shadow"></div>
               <img src="{PortraitURL-128}" alt="Me" />
             </div>
         </div>
