--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -282,9 +282,9 @@
         {/block:Description}
         
         {block:Following} 
-          <div id="follow_wrapper">
+          <span id="follow_wrapper">
             <a id="follow" href="http://tumblr.com/follow/{Name}">Follow this blog</a>
-          </div>
+          </span>
         {/block:Following} 
         
         {block:AskEnabled}
