--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -214,7 +214,7 @@
                 
               </div>
               <div class="separator">
-                <img src="http://red-green-tumblr.heroku.com/images/scissor.png" class="scissor" />
+                <img src="http://red-green-tumblr.heroku.com/css/images/scissor.png" class="scissor" />
               </div>
               
             </div>
@@ -317,17 +317,15 @@
     </div>
   </body>
   <footer id='footer'>
-    <a href='' id='powered'>
-
-      <img src="http://red-green-tumblr.heroku.com//images/powered.png">
-    </a>
     <div id='copyright'>
       &copy; 2012. Red Green Tumblr by
-      <a href='http://trivuong.com'>Tri Vuong.</a>
+      <a href='http://trivuong.com'>Tri Vuong</a>.
       Icons by
       <a href='http://www.piwidesign.de'>Philipp Walter</a>.
       Background by 
-      <a href='http://awesomewallpapersblog.com/author/benjammin1/'>Ben</a>
+      <a href='http://awesomewallpapersblog.com/author/benjammin1/'>Ben</a>.
+      Powered by
+      <a href='http://tumblr.com'>Tumblr</a>.
     </div>
 
     <div class='clearfloat'></div>
