--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -321,7 +321,8 @@
       &copy; 2012. Red Green Tumblr by
       <a href='http://trivuong.com'>Tri Vuong</a>.
       Icons by
-      <a href='http://www.piwidesign.de'>Philipp Walter</a>.
+      <a href='http://www.piwidesign.de'>Philipp Walter</a> and
+      <a href='http://iconfinder.com'>Iconfinder</a>.
       Background by 
       <a href='http://awesomewallpapersblog.com/author/benjammin1/'>Ben</a>.
       Powered by
