--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -317,7 +317,7 @@
     </div>
   </body>
   <footer id='footer'>
-    <div id='copyright'>
+    <p id='copyright'>
       &copy; 2012. Red Green Tumblr by
       <a href='http://trivuong.com'>Tri Vuong</a>.
       Icons by
@@ -327,8 +327,6 @@
       <a href='http://awesomewallpapersblog.com/author/benjammin1/'>Ben</a>.
       Powered by
       <a href='http://tumblr.com'>Tumblr</a>.
-    </div>
-
-    <div class='clearfloat'></div>
+    </p>
   </footer>
 </html>
