note count with no label

--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -79,7 +79,7 @@
 					          </div>
 					          
 					          {block:NoteCount}
-            		      <a class="note_count" href="{Permalink}#notes">{NoteCountWithLabel}</a>
+            		      <a class="note_count" href="{Permalink}#notes">{NoteCount}</a>
 					          {/block:NoteCount}
 
                 </div>
