update tumblr markup

--- a/public/tumblr.html
+++ b/public/tumblr.html
@@ -291,6 +291,7 @@
           <li><a href="/">Home</a></li>
           <li><a href="/archive">Archive</a></li>
           <li><a href="{RSS}">RSS Feed</a></li>
+          <li><a href="/random">Random Post</a></li>
         </ul>
         
         {block:AskEnabled}
@@ -324,7 +325,7 @@
   </body>
   <footer id='footer'>
     <p id='copyright'>
-      &copy; 2012. Red Green Tumblr by
+      &copy; 2012. Designed by
       <a href='http://trivuong.com'>Tri Vuong</a>.
       Icons by
       <a href='http://www.piwidesign.de'>Philipp Walter</a> and
